fixed overlapping css rule

--- a/src/app/css/index.css
+++ b/src/app/css/index.css
@@ -326,7 +326,7 @@ div.context-text {
   padding: 20px 5px 20px 30px;
 }
 
-.button.comment {
+.button.add-comment {
   padding: 10px;
 }
 
